Refactor, improve Playlist implementation

--- a/PodTube/Client/Pages/FetchData.razor
+++ b/PodTube/Client/Pages/FetchData.razor
@@ -1,6 +1,5 @@
 ﻿@page "/fetchdata"
-@using PodTube.Shared
-@using PodTube.Shared.Models;
+@using PodTube.Shared.Models.DTO;
 @inject HttpClient Http
 @inject NavigationManager MyNavigationManager
 
