--- a/PodTube/Client/Shared/MainLayout.razor
+++ b/PodTube/Client/Shared/MainLayout.razor
@@ -1,17 +1,21 @@
 ﻿@inherits LayoutComponentBase
+@inject NavigationManager Navigator
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+<MudThemeProvider/>
+<MudDialogProvider/>
+<MudSnackbarProvider/>
 
-    <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
+<MudLayout>
+    <MudAppBar Elevation="1">
+        <MenuBar 
+            OnChannelsButton="@(()=>Navigator.NavigateTo("/channels"))"
+                 OnApiButton="@(()=>Navigator.NavigateTo("/swagger/index.html", forceLoad: true))"></MenuBar>
+    </MudAppBar>
+    <MudMainContent>
+        @Body
+    </MudMainContent>
+</MudLayout>
 
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
+@code {
+    
+}
