Improve page design

--- a/PodTube/Client/Components/VideoList/VideoCard.razor
+++ b/PodTube/Client/Components/VideoList/VideoCard.razor
@@ -10,6 +10,10 @@
             </MudStack>
         </MudStack>
     </MudCardContent>
+    <MudCardActions>
+        <MudButton Variant="Variant.Text" Color="Color.Primary">Play</MudButton>
+        <MudButton Variant="Variant.Text" Color="Color.Primary">Save</MudButton>
+    </MudCardActions>
 </MudCard>
 @code {
     [Parameter] public VideoDto Video { get; set; }
