--- a/PodTube/Client/Pages/ChannelPage.razor
+++ b/PodTube/Client/Pages/ChannelPage.razor
@@ -29,7 +29,7 @@
             <MudStack>
                 <PagedContent @bind-PageNumber="pageNumber" @bind-Limit="limit" Total="total" ContentReady="contentReady"
                           @bind-PageNumber:after="GetVideosForCurrentPage" @bind-Limit:after="GetVideosForCurrentPage">
-                    <VideoList Videos="videos" />
+                    <VideoList Videos="videos" PlayPressed="OnVideoPlayClicked"/>
                 </PagedContent>
             </MudStack>
         </MudCardContent>
@@ -47,7 +47,7 @@
 
     public int pageNumber = 1;
     public int total = 0;
-    public int limit = 1;
+    public int limit = 2;
     public bool contentReady = false;
 
     protected override async Task OnInitializedAsync() {
@@ -65,6 +65,10 @@
         var pagedVideo = await client.GetChannelVideosAsync(channel?.Id ?? 0, pageNumber, limit);
         videos = pagedVideo.Content;
         total = pagedVideo.Total;
+    }
+
+    public void OnVideoPlayClicked(long id) {
+        Navigator.NavigateTo("/video/" + id);
     }
 }
 
