It... looks promising

--- a/PodTube/Client/Components/Channels/ChannelGrid/ChannelGrid.razor
+++ b/PodTube/Client/Components/Channels/ChannelGrid/ChannelGrid.razor
@@ -1,4 +1,5 @@
-﻿@using PodTube.Shared.Models.DTO;
+﻿@using PodTube.Client.Components.Channels.ChannelCard
+@using PodTube.Shared.Models.DTO;
 <MudGrid Justify="Justify.Center">
     @foreach (var channel in Channels) {
         <MudItem>
