--- a/PodTube/Client/Components/Channels/ChannelCard/ChannelCard.razor
+++ b/PodTube/Client/Components/Channels/ChannelCard/ChannelCard.razor
@@ -3,7 +3,12 @@
     
 <MudPaper Height="250px" Width="250px" onclick="@(() => ChannelClicked.InvokeAsync(Channel.Id ?? 0))">
     <MudStack AlignItems="AlignItems.Center">
-        <MudImage Width="100" Src="@Channel.Thumbnail" Alt="Thumbnail" Elevation="25" Class="rounded-lg mt-5" />
+        @if(Channel.Thumbnail != null) {
+            <MudImage Width="100" Src="@Channel.Thumbnail" Alt="Thumbnail" Elevation="25" Class="mt-5" />
+        } else {
+            <MudIcon Size="Size.Large" Class="rounded-lg mt-5" Icon="@Icons.Material.Filled.VideoLibrary"></MudIcon>
+        }
+
         <MudText Typo="Typo.h6" Align="Align.Center">@Channel.Name</MudText>
     </MudStack>
 </MudPaper>
